--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         run: ./mvnw verify
 
       - name: SonarCloud Scan
-        run: ./mvnw -B -Dsonar.login=$SONAR_TOKEN verify sonar:sonar -P sonarcloud
+        run: ./mvnw -B verify sonar:sonar -P sonarcloud
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
